--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,4 +1,6 @@
 {
     "/assets/js/main.js": "/assets/js/main.js",
+    "/assets/js/bootstrap.js": "/assets/js/bootstrap.js",
+    "/assets/css/bootstrap.css": "/assets/css/bootstrap.css",
     "/assets/css/main.css": "/assets/css/main.css"
 }
