--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.3",
+    "@popperjs/core": "^2.9.2",
     "bootstrap": "^5.0.2",
-    "cross-env": "^7.0.3",
+    "darkreader": "^4.9.34",
+    "jquery": "^3.6.0",
     "laravel-mix": "^6.0.25"
   },
   "scripts": {
-    "development": "mix",
+    "dev": "mix",
     "watch": "mix watch",
     "watch-poll": "mix watch -- --watch-options-poll=1000",
     "hot": "mix watch --hot",
-    "production": "mix --production"
+    "prod": "mix --production"
   },
   "devDependencies": {
     "@types/node": "^16.0.0",
+    "cross-env": "^7.0.3",
     "resolve-url-loader": "^4.0.0",
     "sass": "^1.35.1",
     "sass-loader": "^12.1.0",
