--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
     "@fortawesome/fontawesome-free": "^5.15.3",
     "@popperjs/core": "^2.9.2",
     "bootstrap": "^5.0.2",
-    "darkreader": "^4.9.34",
     "jquery": "^3.6.0",
     "laravel-mix": "^6.0.25"
   },
@@ -16,6 +15,8 @@
   },
   "devDependencies": {
     "@types/node": "^16.0.0",
+    "browser-sync": "^2.27.4",
+    "browser-sync-webpack-plugin": "^2.3.0",
     "cross-env": "^7.0.3",
     "resolve-url-loader": "^4.0.0",
     "sass": "^1.35.1",
