--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "typescript": "^4.3.5"
   },
   "name": "about-me",
-  "description": "Ceci est le Github de mon site personel me servant de CV ainsi que de Portfolio, il utilise bootstrap 5 et fonctionne sous HTML, CSS, JavaScript et PHP.",
-  "version": "1.0.0",
+  "description": "Ceci est le Github de mon site personnel me servant de CV ainsi que de Portfolio, il utilise bootstrap 5 et fonctionne sous HTML, SCSS et TypeScript.",
+  "version": "1.0.1",
   "main": "webpack.mix.js",
   "repository": {
     "type": "git",
